Add learner and guide registration API
